[project]
name = "photogrammetry-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jourdelune", email = "jourdelune863@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "lightglue",
    "networkx>=3.5",
    "open3d>=0.19.0",
    "pycolmap==3.10.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "trimesh>=4.6.12",
    "vggt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vggt = { git = "https://github.com/facebookresearch/vggt.git" }
lightglue = { git = "https://github.com/cvg/LightGlue.git" }
